--- a/Copy_of_Project2_3.ipynb
+++ b/Copy_of_Project2_3.ipynb
@@ -152,7 +152,11 @@
       "metadata": {
         "id": "ZYUQqWKMzXMk",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cad4ab75-e06e-42da-d770-0b4270b871a4"
       },
       "cell_type": "code",
       "source": [
@@ -167,10 +171,19 @@
         "LABEL_COLOR_MAP = {0 : 'r', 1 : 'g',2 : 'b'}\n",
         "graph=plt.scatter(data_pts1[:,0], data_pts1[:,1], c=[LABEL_COLOR_MAP[l] for l in cluster_index],marker='^')\n",
         "plt.savefig(\"task3_iter1_a.jpg\")\n",
-        "plt.close()"
+        "plt.close()\n",
+        "print(\"classification vector:\", cluster_index)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "('classification vector:', [0, 0, 2, 0, 1, 0, 0, 2, 0, 0])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -186,7 +199,11 @@
       "metadata": {
         "id": "elWhFrPbzX8s",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e7d0394a-ad6a-4143-8f22-aa18f3545d4b"
       },
       "cell_type": "code",
       "source": [
@@ -199,8 +216,16 @@
         "plt.savefig(\"task3_iter1_b.jpg\")\n",
         "plt.close()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "('For iteration 1 means are:', [[4.800000000000001, 3.05], [5.3, 4.0], [6.2, 3.025]])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -216,7 +241,11 @@
       "metadata": {
         "id": "TPZ4C8JizbXF",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "8aeb5f13-2c2e-4860-f9c6-49b7667b084b"
       },
       "cell_type": "code",
       "source": [
@@ -233,10 +262,20 @@
         "LABEL_COLOR_MAP = {0 : 'r', 1 : 'g',2 : 'b'}\n",
         "graph=plt.scatter(data_pts2[:,0], data_pts2[:,1], c=[LABEL_COLOR_MAP[l] for l in cluster_index],marker='^')\n",
         "plt.savefig(\"task3_iter2_a.jpg\")\n",
-        "plt.close()"
+        "plt.close()\n",
+        "print(\"classification vector:\", cluster_index)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "('For iteration 2 means are:', [[4.800000000000001, 3.05], [5.3, 4.0], [6.2, 3.025]])\n",
+            "('classification vector:', [2, 0, 2, 0, 1, 0, 0, 2, 1, 2])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
